fixing IOSbug with cropped text

--- a/src/entities/post/postItem.module.scss
+++ b/src/entities/post/postItem.module.scss
@@ -1,4 +1,7 @@
 @import "../../shared/variables.scss";
+.postItemContainer {
+  padding-bottom: 10px;
+}
 .postItemContainerWrapper {
   display: flex;
   flex-direction: row;
