--- a/src/widgets/header/header.module.scss
+++ b/src/widgets/header/header.module.scss
@@ -26,6 +26,9 @@
       align-items: center;
       color: $mainColorWhite;
     }
+    & button {
+      color: $mainColorBlack !important;
+    }
   }
 }
 
